# Introduction-to-NLP-SoSe2025

./: .gitignore  README.md  naive_bayes.csv  naive_bayes.ipynb  pyproject.toml  regex.ipynb  viterbi.ipynb
